--- a/WaitingView/Waiting Files/WaitingView.xib
+++ b/WaitingView/Waiting Files/WaitingView.xib
@@ -10,46 +10,88 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WaitingViewVC" customModule="WaitingView" customModuleProvider="target">
+            <connections>
+                <outlet property="activityIndicator" destination="7qA-Eb-Smc" id="5UU-AP-d0n"/>
+                <outlet property="buttonStopView" destination="pKd-w1-6hV" id="TCn-04-Q1v"/>
+                <outlet property="labelTextWaiting" destination="Lhe-Xo-WfK" id="F1O-1j-KAg"/>
+                <outlet property="stackViewCenterItems" destination="75c-RO-h9o" id="uGR-Q7-ixn"/>
+                <outlet property="viewBackground" destination="Jcb-6C-Cdp" id="m5d-aQ-9jh"/>
+                <outlet property="viewCenterContainer" destination="kpD-qk-cpy" id="4xS-CA-BTd"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jcb-6C-Cdp">
-                    <rect key="frame" x="30" y="50" width="315" height="587"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="75c-RO-h9o">
-                            <rect key="frame" x="20" y="252" width="275" height="83"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kpD-qk-cpy">
+                            <rect key="frame" x="139" y="273" width="97" height="121"/>
                             <subviews>
-                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7qA-Eb-Smc">
-                                    <rect key="frame" x="119" y="0.0" width="37" height="37"/>
-                                </activityIndicatorView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lhe-Xo-WfK">
-                                    <rect key="frame" x="70" y="47" width="135" height="36"/>
-                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="75c-RO-h9o">
+                                    <rect key="frame" x="10" y="20" width="77" height="81"/>
+                                    <subviews>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7qA-Eb-Smc">
+                                            <rect key="frame" x="20" y="0.0" width="37" height="37"/>
+                                        </activityIndicatorView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="text" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lhe-Xo-WfK">
+                                            <rect key="frame" x="0.0" y="57" width="77" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="7qA-Eb-Smc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="75c-RO-h9o" secondAttribute="leading" constant="20" id="WrF-9c-rM2"/>
+                                        <constraint firstAttribute="trailing" secondItem="Lhe-Xo-WfK" secondAttribute="trailing" id="n7P-4r-MyF"/>
+                                        <constraint firstItem="Lhe-Xo-WfK" firstAttribute="leading" secondItem="75c-RO-h9o" secondAttribute="leading" id="rml-vk-IOh"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7qA-Eb-Smc" secondAttribute="trailing" constant="20" id="xVX-Xn-ZoB"/>
+                                    </constraints>
+                                </stackView>
                             </subviews>
-                        </stackView>
+                            <color key="backgroundColor" white="0.12256528253424658" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="75c-RO-h9o" firstAttribute="top" secondItem="kpD-qk-cpy" secondAttribute="top" constant="20" id="C9g-Bm-3RY"/>
+                                <constraint firstItem="75c-RO-h9o" firstAttribute="leading" secondItem="kpD-qk-cpy" secondAttribute="leading" constant="10" id="qDs-vp-a0z"/>
+                                <constraint firstAttribute="bottom" secondItem="75c-RO-h9o" secondAttribute="bottom" constant="20" id="vpP-LO-YaI"/>
+                                <constraint firstAttribute="trailing" secondItem="75c-RO-h9o" secondAttribute="trailing" constant="10" id="x8c-Kz-7M0"/>
+                            </constraints>
+                        </view>
+                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pKd-w1-6hV">
+                            <rect key="frame" x="30" y="607" width="315" height="30"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="gVy-mc-swM"/>
+                            </constraints>
+                            <state key="normal" title="Stop">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="buttonStopViewAction:" destination="-1" eventType="touchUpInside" id="LO0-i6-Si7"/>
+                            </connections>
+                        </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.98029571770000001" green="0.16956627369999999" blue="0.21955630179999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" white="0.5" alpha="0.75" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="75c-RO-h9o" firstAttribute="leading" secondItem="Jcb-6C-Cdp" secondAttribute="leading" constant="20" id="SKt-I2-zmu"/>
-                        <constraint firstAttribute="trailing" secondItem="75c-RO-h9o" secondAttribute="trailing" constant="20" id="Sc0-xs-f1j"/>
-                        <constraint firstItem="75c-RO-h9o" firstAttribute="centerX" secondItem="Jcb-6C-Cdp" secondAttribute="centerX" id="VAR-l8-kS5"/>
-                        <constraint firstItem="75c-RO-h9o" firstAttribute="centerY" secondItem="Jcb-6C-Cdp" secondAttribute="centerY" id="a29-bB-ePk"/>
+                        <constraint firstAttribute="bottom" secondItem="pKd-w1-6hV" secondAttribute="bottom" constant="30" id="6L0-eP-3fq"/>
+                        <constraint firstItem="kpD-qk-cpy" firstAttribute="centerY" secondItem="Jcb-6C-Cdp" secondAttribute="centerY" id="Auy-Yu-aee"/>
+                        <constraint firstItem="kpD-qk-cpy" firstAttribute="width" relation="lessThanOrEqual" secondItem="Jcb-6C-Cdp" secondAttribute="width" multiplier="0.7" id="O5r-19-jm9"/>
+                        <constraint firstItem="pKd-w1-6hV" firstAttribute="leading" secondItem="Jcb-6C-Cdp" secondAttribute="leading" constant="30" id="XHv-V4-6pz"/>
+                        <constraint firstAttribute="trailing" secondItem="pKd-w1-6hV" secondAttribute="trailing" constant="30" id="Z9B-C4-TWW"/>
+                        <constraint firstItem="kpD-qk-cpy" firstAttribute="centerX" secondItem="Jcb-6C-Cdp" secondAttribute="centerX" id="euI-c1-xyk"/>
+                        <constraint firstItem="kpD-qk-cpy" firstAttribute="height" relation="lessThanOrEqual" secondItem="Jcb-6C-Cdp" secondAttribute="height" multiplier="0.7" id="ofD-Zm-32m"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Jcb-6C-Cdp" secondAttribute="trailing" constant="30" id="Ino-yq-ygo"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Jcb-6C-Cdp" secondAttribute="bottom" constant="30" id="Nid-a5-bBA"/>
-                <constraint firstItem="Jcb-6C-Cdp" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="O4Z-rx-zSo"/>
-                <constraint firstItem="Jcb-6C-Cdp" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="30" id="Zoj-oV-b4a"/>
-                <constraint firstItem="Jcb-6C-Cdp" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yHF-j8-v6p"/>
+                <constraint firstAttribute="bottom" secondItem="Jcb-6C-Cdp" secondAttribute="bottom" id="Zk0-Ea-m7c"/>
+                <constraint firstItem="Jcb-6C-Cdp" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="pY3-El-lJN"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Jcb-6C-Cdp" secondAttribute="trailing" id="vR4-dX-RAL"/>
+                <constraint firstItem="Jcb-6C-Cdp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="yN3-p6-GzQ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
